--- a/index.html
+++ b/index.html
@@ -7,17 +7,10 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="stylecable.css">
-  <link rel="stylesheet" href="styleIndex.css">  
-  
-  <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
-  
   <style>
     body {
       background-image: url('./img/144550.jpg');
       background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
       color: #fff;
     }
 
@@ -26,11 +19,7 @@
       background-color: rgba(248, 242, 244, 0.9);
     }
 
-    .navbar-brand {
-      color: #333;
-    }
-
-    .navbar-nav .nav-link {
+    .navbar-brand, .navbar-nav .nav-link {
       color: #333;
     }
 
@@ -38,30 +27,6 @@
       padding: 20px;
       background-color: rgba(247, 151, 167, 0.9);
       border-radius: 10px;
-    }
-
-    .ul-text-glow {
-      list-style: none;
-      padding: 0;
-      text-align: center;
-    }
-
-    .li-text-glow {
-      display: inline-block;
-      margin: 0 5px;
-    }
-
-    .input-text-glow {
-      display: none;
-    }
-
-    .div-text-glow {
-      background: linear-gradient(45deg, #FF3D57, #FFBF86);
-      -webkit-background-clip: text;
-      color: transparent;
-      font-size: 24px;
-      font-weight: bold;
-      margin: 0;
     }
 
     h1, h2, h5 {
@@ -85,98 +50,30 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="home.html">
-    <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
-    Filo
-  </a>
+  <a class="navbar-brand" href="home.html">Filo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="reserve.html">การจองห้อง</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
-      </li>
+      <li class="nav-item"><a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a></li>
+      <li class="nav-item"><a class="nav-link" href="reserve.html">การจองห้อง</a></li>
+      <li class="nav-item"><a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a></li>
+      <li class="nav-item"><a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a></li>
+      <li class="nav-item"><a class="nav-link" href="login.html">เข้าสู่ระบบ</a></li>
     </ul>
   </div>
 </nav>
 
 <!-- Main Content -->
 <div class="container mt-5">
-  <h1>
-    <ul class="ul-text-glow">
-      <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked=""/>
-        <div class="div-text-glow">ยิ</div>
-    </li >
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">น</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">ดี</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">ต้</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked=""/>
-        <div class="div-text-glow">อ</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">น</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">รั</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked=""/>
-        <div class="div-text-glow">บ</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">F</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">i</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">l</div>
-    </li>
-    <li class="li-text-glow">
-        <input class="input-text-glow" type="checkbox" checked="">
-        <div class="div-text-glow">o</div>
-    </li>
-      <!-- Repeat similar lines for other checkboxes -->
-    </ul>
-  </h1>
-  <h2 style="color: crimson;">เปิดทำการ 9.00-19.00 น. (เปิดทำการทุกวัน)</h2>
+  <h1>Welcome to Filo</h1>
+  <h2>เปิดทำการ 9.00-19.00 น. (เปิดทำการทุกวัน)</h2>
   <h5>บริการรับฝากเลี้ยงแมว ทุกสายพันธุ์ และมีสัตว์แพทย์พร้อมดูแลตลอด 24 ชั่วโมง</h5>
   <div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/zadxEvylsw8" frameborder="0" allowfullscreen></iframe>
-    <img src="./cat/cat-6.png" width="42%" height="50%">
+    <iframe src="https://www.youtube.com/embed/zadxEvylsw8" frameborder="0" allowfullscreen></iframe>
+    
   </div>
-  
-  <!-- Your main website content here -->
-
 </div>
 
 <!-- Footer -->
@@ -203,61 +100,3 @@
 
 </body>
 </html>
-
-
-
-
-<!--
-  <div style="align-content: center;">
-      <ul class="ul-text-glow label-text-glow" >
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked=""/>
-              <div class="div-text-glow">ยิ</div>
-          </li >
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">น</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">ดี</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">ต้</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked=""/>
-              <div class="div-text-glow">อ</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">น</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">รั</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked=""/>
-              <div class="div-text-glow">บ</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">F</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">i</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">l</div>
-          </li>
-          <li class="li-text-glow">
-              <input class="input-text-glow" type="checkbox" checked="">
-              <div class="div-text-glow">o</div>
-          </li>
-      </ul>
-      </div>
--->
