--- a/Showcondition.html
+++ b/Showcondition.html
@@ -49,6 +49,10 @@
       margin: 0;
       padding: 0;
     }
+        /* เพิ่ม CSS เพื่อกำหนดระยะห่างหรือ padding ใน <ul> */
+        ul {
+            margin-left: 60px; /* หรือใช้ padding-left: 20px; ตามที่คุณต้องการ */
+        }
   </style>
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;600&display=swap">
 </head>
@@ -94,22 +98,21 @@
         
         2. ระหว่างการฝากเลี้ยง หากแมวที่นำมาฝากเกิดการอุบัติเหตุหรือเจ็บป่วยระหว่างานฝากเลี้ยง ทางเจ้าของร้านจะไม่รับผิดชอบทั้งสิ้น<br><br>
 
-        3. ราคาฝากเลี้ยง ขั้นต่ำ 1 วัน<br><br>
+        3. คิดราคาการใช้บริการขั้นต่ำ 1 วัน<br><br>
 
         4. ระหว่างการดูแล หากแมวเกิดอาการป่วย จะสัตว์แพทย์คอยดูแล และจะคิดบริการเพิ่มเติม<br><br>
 
         5. สิ่งอำนวยความสะดวกภายในห้อง อาทิ ของเล่นแมว กะบะทราย จานข้าว กล้องวงจรปิด<br><br>
 
         6. ประเภทของห้องมี 4 ประเภท<br><br>
-        1.	standard<br>
-        2.	superior<br>
-        3.	deluxe<br>
-        4.	suite<br><br>
-        7. กรณียกเลิกการจอง ต้องบอกก่อนล่วงหน้า 7 วัน<br><br>
+        <ul>
+          <li>Standard - ราคา 250 บาท ต่อวัน</li>
+          <li>Superior - ราคา 450 บาท ต่อวัน</li>
+          <li>Deluxe Room - ราคา 550 บาท ต่อวัน</li>
+          <li>Sweet Room - ราคา 900 บาท ต่อวัน</li>
+      </ul>
+        7. หากต้องการยกเลิกการจอง คืนเงินกรณีแจ้งล่วงหน้าก่อนวันเข้าใช้งานล่วงหน้า 7 วัน<br><br>
         8. จองล่วงหน้าได้ไม่เกิน 1 เดือน<br><br>
-        9. หากข้อมูลของแมวไม่ครบถ้วนให้กรอกข้อมูลของแมวให้ตรงตามใบวัคซีน<br><br>
-        10. เวลาเปิดทำการ 9.00-19.00 (ไม่มีวันหยุด)<br><br>
-        11. การฝากเลี้ยงขั้นต่ำ คือ 1 วัน<br><br>
         <p class="body-carousel-1">
             <p id="slider" class="root-carousel ">
                 <input class="inputcarousel" type="radio" name="slider" id="s1" checked/>
