--- a/index.html
+++ b/index.html
@@ -84,21 +84,19 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
   <a class="navbar-brand" href="home.html">
     <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
   </a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
+  </button >
+  <div class="collapse navbar-collapse" id="navbarNav" >
+    <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="reserve.html">การจองห้อง</a>
+        <a class="nav-link" href="contract.html">ข้อมูลการติดต่อ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
@@ -112,7 +110,6 @@
     </ul>
   </div>
 </nav>
-
 <!-- Main Content -->
 <div class="container mt-5">
   <h1>
