--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-  <a class="navbar-brand" href="home.html">
+  <a class="navbar-brand" href="index.html">
     <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
   </a>
