--- a/login.html
+++ b/login.html
@@ -118,8 +118,8 @@
               <div class="col-md-12">
               <p align="center">
               
-              <a href="before.html" class="btn btn-info btn-sm"> กลับหน้าหลัก </a>
-              <button href="home.html" type="submit" class="btn btn-primary btn-sm" id="btn" value="Signin"> เข้าสู่ระบบ </button> 
+              <a href="index.html" class="btn btn-info btn-sm"> กลับหน้าหลัก </a>
+              <a href="home.html" class="btn btn-primary btn-sm"> เข้าสู่ระบบ </a>
               </p>
               </div>
               <br>
