--- a/reserve.html
+++ b/reserve.html
@@ -64,7 +64,7 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fce4ec;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f1759e;">
   <a class="navbar-brand" href="home.html">
     <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
@@ -73,19 +73,19 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button >
-  <div class="collapse navbar-collapse" id="navbarNav" >
+  <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a>
+        <a class="nav-link" href="catdata.html" style="color: #fce4ec;" >จัดการข้อมูลแมว</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="reserve.html">การจองห้อง</a>
+        <a class="nav-link" href="reserve.html" style="color: #fce4ec;" >การจองห้อง</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
+        <a class="nav-link" href="inforoom2.html" style="color: #fce4ec;" >ข้อมูลห้อง</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
+        <a class="nav-link" href="Showcondition.html" style="color: #fce4ec;" >เงื่อนไขการบริการ</a>
       </li>
     </ul>
   </div>
