--- a/home.html
+++ b/home.html
@@ -8,10 +8,47 @@
   <!-- Custom Styles -->
   <link rel="stylesheet" href="stylecable.css">
   <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
+  <style>
+    body {
+      background-image: url('./img/144550.jpg');
+      background-size: cover;
+      color: #fff;
+    }
+
+    .navbar {
+      padding: 10px 20px;
+      background-color: rgba(248, 242, 244, 0.9);
+    }
+
+    .navbar-brand, .navbar-nav .nav-link {
+      color: #333;
+    }
+
+    .container {
+      padding: 20px;
+      background-color: rgba(247, 151, 167, 0.9);
+      border-radius: 10px;
+    }
+
+    h1, h2, h5 {
+      text-align: center;
+    }
+
+    iframe {
+      width: 100%;
+      height: 315px;
+    }
+
+    footer {
+      background-color: rgba(250, 159, 174, 0.9);
+      color: #fff;
+      padding: 20px 0;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 <body  style="background-color: #fce4ec;;">
 <!--style="background-image: url('./cat/cats-cafe-4697753_1920.jpg');" -->
-
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
@@ -54,41 +91,55 @@
 </nav>
 
 
+  <!-- Main Content -->
+<div class="container content mt-5">
+  <h2  style="color: black;">ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
 
+  <!-- Section 1: About Us -->
+  <section  style="color: black;">
+    <h3>About Us</h3>
+    <p>เราคือเว็บไซต์ที่มุ่งเน้นในการรับฝากแมว ทำให้คุณสามารถให้บริการการดูแลแมวของคุณได้ทุกที่ทุกเวลา</p>
+  </section>
 
-<!-- Main Content -->
-<div class="container content mt-5 " >
-  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
+  <!-- Section 2: Services -->
+  <section  style="color: black;">
+    <h3>บริการของเรา</h3>
+    <ul>
+      <li>รับฝากแมวทุกสายพันธุ์</li>
+      <li>มีสัตวแพทย์คอยดูแลตลอด 24 ชั่วโมง</li>
+      <li>การจองห้องออนไลน์ทำได้ง่ายๆ</li>
+    </ul>
+  </section>
 
+  <!-- Section 3: Featured Video and Image -->
+  <section  style="color: black;">
+    <h3>Featured Content</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zadxEvylsw8" frameborder="0" allowfullscreen></iframe>
+  </section>
+</div>
 </div>
 
 <!-- body -->
 
-
-
-
-
-
 <!-- footer.html -->
 
 <!-- Footer -->
-<footer class=" text-light p-2 mt-5" style="background-color: rgb(250, 159, 174);">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 label-color-font">
-          <h4>Contact Us</h4>
-          <p>Name : mama mama</p>
-          <p>Email: your@email.com</p>
-          <p>Phone: 123-456-7890</p>
-        </div>
-        <div class="col-md-6 text-right label-color-font">
-          <p><br>  เปิดทุกวัน เวลา 09.00 - 19.00</p>
-          <p>&copy; 2023 Your Website. All rights reserved.</p>
-        </div>
+<footer class="text-light p-4 mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 text-left">
+        <h4>Contact Us</h4>
+        <p>Name: mama mama</p>
+        <p>Email: your@email.com</p>
+        <p>Phone: 123-456-7890</p>
+      </div>
+      <div class="col-md-6 text-right">
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
       </div>
     </div>
-  </footer>
-<!-- Bootstrap JS, Popper.js, and jQuery -->
+  </div>
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
