--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -21,9 +21,9 @@
       color: #fff;
     }
     .container {
-      background-color: #fff;
-      border-radius: 10px;
       padding: 20px;
+      background-color: rgba(247, 151, 167, 0.9);
+      border-radius: 10px;
     }
     .card-header {
       background-color: #e779ba;
@@ -234,16 +234,16 @@
 
   </div>
 <!-- Footer -->
-<footer class=" text-light p-4 mt-5" style="background-color: rgb(250, 159, 174);">
+<footer class="text-light p-4 mt-5">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 label-color-font">
+      <div class="col-md-6 text-left">
         <h4>Contact Us</h4>
-        <p>Name : mama mama</p>
+        <p>Name: mama mama</p>
         <p>Email: your@email.com</p>
         <p>Phone: 123-456-7890</p>
       </div>
-      <div class="col-md-6 text-right label-color-font">
+      <div class="col-md-6 text-right">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
       </div>
     </div>
