--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="collapse navbar-collapse" id="navbarNav" >
     <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="contract.html">ข้อมูลการติดต่อ</a>
+        <a class="nav-link" href="contact.html">ข้อมูลการติดต่อ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
@@ -71,6 +71,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="register.html">สมัครสมาชิก</a>
       </li>
     </ul>
   </div>
