--- a/Showcondition.html
+++ b/Showcondition.html
@@ -50,9 +50,13 @@
       padding: 0;
     }
         /* เพิ่ม CSS เพื่อกำหนดระยะห่างหรือ padding ใน <ul> */
-        ul {
+    ul {
             margin-left: 60px; /* หรือใช้ padding-left: 20px; ตามที่คุณต้องการ */
-        }
+    }
+
+    .f16{
+      font-size: 16px;
+    }
   </style>
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;600&display=swap">
 </head>
@@ -85,9 +89,6 @@
       <li class="nav-item">
         <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
-      </li>
     </ul>
   </div>
 </nav>
@@ -96,14 +97,14 @@
 <div class="container mt-5">
   <div class="card cat-info">
     <div class="card-body">
-      <h2 style="font-style:unset;font-family:'Courier New', Courier, monospace;" class="font-condition">Condition</h2><br>
+      <h2 style="font-style:unset;font-family:'Courier New', Courier, monospace;font-size: 64px;" class="font-condition">Condition</h2><br>
       <!-- Your main content here -->
 
-      <div style="font-size: 17px;text-align: left;font-style:unset;font-family:'Courier New', Courier, monospace;">
+      <div style="font-size: 20px;text-align: left;font-style:unset;font-family:'Courier New', Courier, monospace;">
         <!-- Cat information content here -->
         1.  ค่าบริการ จ่ายหลังจากลูกค้าได้ทำการจองห้องของแมวเสร็จสิ้น (จ่ายได้ทาง QR-Code)<br><br>
         
-        2. ระหว่างการฝากเลี้ยง หากแมวที่นำมาฝากเกิดการอุบัติเหตุหรือเจ็บป่วยระหว่างานฝากเลี้ยง ทางเจ้าของร้านจะไม่รับผิดชอบทั้งสิ้น<br><br>
+        2. ระหว่างการฝากเลี้ยง หากแมวที่นำมาฝากเกิดการอุบัติเหตุหรือเจ็บป่วยระหว่างานฝากเลี้ยง ทางเจ้าของร้านจะไม่รับผิดชอบทุกกรณี<br><br>
 
         3. คิดราคาการใช้บริการขั้นต่ำ 1 วัน<br><br>
 
