--- a/login.html
+++ b/login.html
@@ -72,6 +72,9 @@
       <li class="nav-item">
         <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="register.html">สมัครสมาชิก</a>
+      </li>
     </ul>
   </div>
 </nav>
