--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -9,7 +9,9 @@
   <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
   <style>
     body {
-      background-color: #fce4ec;
+      background-image: url('./img/144550.jpg');
+      background-size: cover;
+      color: #fff;
     }
     .navbar {
       background-color: #fa9fae !important;
