--- a/contact.html
+++ b/contact.html
@@ -2,46 +2,95 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Your Website</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Custom Styles -->
+  <style>
+    body {
+      background-image: url('./img/144550.jpg');
+      background-size: cover;
+      color: #fff;
+    }
 
-  <title>Green Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    .navbar {
+      padding: 10px 20px;
+      background-color: rgba(248, 242, 244, 0.9);
+    }
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    .navbar-brand, .navbar-nav .nav-link {
+      color: #333;
+    }
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    .container {
+      padding: 20px;
+      background-color: rgba(247, 151, 167, 0.9);
+      border-radius: 10px;
+    }
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    h1, h2, h5 {
+      text-align: center;
+    }
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+    iframe {
+      width: 100%;
+      height: 315px;
+    }
 
-  <!-- =======================================================
-  * Template Name: Green
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/green-free-one-page-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    footer {
+      background-color: rgba(250, 159, 174, 0.9);
+      color: #fff;
+      padding: 20px 0;
+      border-radius: 10px;
+    }
+
+    .pd-20 {
+      padding: 30px 0;
+
+    }
+  </style>
+  
 </head>
 <body>
+
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+  <a class="navbar-brand" href="index.html">
+    <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
+    Filo
+  </a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button >
+  <div class="collapse navbar-collapse" id="navbarNav" >
+    <ul class="navbar-nav ml-auto" >
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">ข้อมูลการติดต่อ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="register.html">สมัครสมาชิก</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <!-- ======= Contact Section ======= -->
-<section id="contact" class="contact">
+<section id="contact" class="contact pd-20">
     <div class="container">
 
       <div class="section-title">
-        <h2>Contact</h2>
+        <h1>Contact</h1>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div>
 
